    * 0769 juniper_trpz_cpu_util, juniper_trpz_flash, juniper_trpz_info, juniper_trpz_power: new Checks for juniper trapeze switches
    * 0770 innovaphone_licenses: New check to monitor licenses on innovaphone devices"
    * 0771 juniper_trpz_aps: Show the number of connected access points on juniper wlan controllers
    * 0772 added special agent for IBM SVC / V7000 storage systems...
    * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
    * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now
    * 0300 FIX: cisco_fru_power: Trying not to inventorize not plugged in FRUs...
    * 0305 FIX: apache_status: Fixed exception when agent reports HTML code as apache-status data...
    * 0104 FIX: mssql: Server instances with underline in name are now supported....
    * 0240 FIX: Virtualmachine names with space no longer have missing piggyback data...
    * 0310 FIX: apache_status: Improved handling of unexpeted data sent by agents...
    * 0088 FIX: esx_vsphere_datastores: fixed error with reported capacity of 0 bytes...
    * 0243 FIX: cisco_qos: no longer crashes when the qos policy name is not set...
    * 0326 FIX: hr_fs printer_supply: Improved translation of wrong encoded chars...
    * 0059 FIX: agent_vpshere: new option for supporting ESX 4.1...
    * 0334 FIX: cisco_fantray: Fixed error on Cisco devices which do not support this check...
    * 0355 FIX: heartbeat_crm: Now handling "Failed actions:" output in agent...
    * 0357 FIX: megaraid_bbu: Fixed expected state checking...
    * 0358 FIX: df: now ignores filesystems with a reported size of '-'...
    * 0360 FIX: multipath: Inventory handles non loaded kernel module now...
    * 0339 FIX: blade_bays blade_blades blade_blowers blade_health blade_mediatray blade_powerfan blade_powermod: fix scan function...
    * 0340 FIX: blade_health: fix check, it was totally broken...
    * 0363 FIX: mysql_capacity: Did use wrong calculated warn / crit thresholds...