@@ -1,0 +1,8 @@
+Title: ibm_svc_system: new check for System Info of IBM SVC / V7000 devices
+Level: 1
+Component: checks
+Version: 1.2.5i1
+Date: 1396002652
+Class: feature
+
+
