@@ -271,12 +271,13 @@ register_rule(group,
                          ( "lsmdiskgrp",      _("MDisksGrps") ),
                          ( "lsnode",          _("IO Groups") ),
 #                         ( "lsnodestats",     _("Node Stats") ),
-#                         ( "lssystem",        _("System") ),
+                         ( "lssystem",        _("System Info") ),
 #                         ( "lssystemstats",   _("System Stats") ),
                      ],
 #                     default_value = [ "lshost", "lslicense", "lsmdisk", "lsmdiskgrp", "lsnode",
 #                                       "lsnodestats", "lssystem", "lssystemstats",  ],
-                     default_value = [ "lshost", "lslicense", "lsmdisk", "lsmdiskgrp", "lsnode", ],
+                     default_value = [ "lshost", "lslicense", "lsmdisk", "lsmdiskgrp", "lsnode",
+                                       "lssystem", ],
                      allow_empty = False,
                    ),
                    title = _("Retrieve information about..."),
